--- a/Bday-Party-Project/bdayparty.html
+++ b/Bday-Party-Project/bdayparty.html
@@ -1,46 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Top Song August 6 2003</title>
+    <title>Top Song August 6, 2003</title>
     <link rel="stylesheet" type="text/css" href="bdayparty.css">
     <link rel="preconnect" href="https://www.dafont.com/crazy-guy.font">
+    <style>
+        /* CSS styles go here */
+        /* Fonts */
+        @font-face {
+            font-family: 'Crazy';
+            src: url('./crazy_guy/Crazy Guy.ttf') format('truetype');
+        }
+
+        @font-face {
+            font-family: 'Cute';
+            src: url('./cute_notes/Cute Notes.ttf') format('truetype');
+        }
+
+        @font-face {
+            font-family: 'Bubbly';
+            src: url('./royal_acidbath/Royalacid_o.ttf') format('truetype');
+        }
+
+        /* General Styles */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: black;
+        }
+
+        #wrapper {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            border-radius: 8px;
+            position: relative;
+            background-color: #AB8CA7;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        header {
+            background-color: #AB8CA7;
+            padding: 10px;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        h1 {
+            color: black;
+            font-family: 'Crazy', cursive;
+            margin-top: 0;
+        }
+
+        section {
+            margin-top: 20px;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        #right {
+            background-color: #f1b036;
+            padding: 30px;
+            width: 300px;
+            height: 578px;
+            border-radius: 8px;
+        }
+
+        #left {
+            width: 450px;
+            padding: 20px;
+            background-color: #92c282;
+            border-radius: 8px;
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin: auto;
+            border-radius: 8px;
+        }
+
+        p {
+            line-height: 1.6;
+            color: black;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            text-align: center;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        }
+
+        h2 {
+            color: black;
+            font-family: 'Bubbly';
+            font-size: 27px;
+            text-align: center;
+        }
+
+        h3 {
+            margin-top: -10px;
+            color: black;
+            font-family: 'Bubbly';
+            text-align: center;
+        }
+
+        .text-box {
+            background-color: #e2cbbf;
+            padding: 20px;
+            border: 2px solid #9c7fc3;
+            border-radius: 8px;
+            width: 250px;
+            margin: auto;
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        a:link, a:visited {
+            color: black;
+            font-family: 'BUBBLY';
+            text-decoration: none;
+        }
+
+        a:active {
+            color: black;
+        }
+
+        a:hover {
+            color: #AB8CA7;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Birthday Beats</h1>
+    </header>
     <div id="wrapper">
-        <header>
-            <h1>Birthday Beats</h1>
-        </header>
         <section>
-        </section>
-        <div id="right">
-            <h3>Crazy In Love - Beyonce;
-                <br> #1 on August 6, 2003</h3>
+            <div id="right">
+                <h2>Crazy In Love - Beyonce <br>#1 on August 6, 2003</h2>
                 <a href="https://www.youtube.com/watch?v=ViwtNLUqkMY" target="_blank">
                     <img src="./crazyinlovecover.jpeg" alt="Crazy In Love - Beyonce">
-            </a>
-            <div id="right2">
-                <a href="https://www.youtube.com/watch?v=ViwtNLUqkMY"></a>
+                </a>
                 <div class="text-box">
-                    <p>Welcome to <a href="https://www.youtube.com/watch?v=ViwtNLUqkMY" target="_blank">The #1 Song on August 6, 2003 <b>Crazy In Love!</a></p>
+                    <p>Welcome to The #1 Song on August 6, 2003 <b>Crazy In Love!</b></a></p>
                 </div>
             </div>
-            <P>"But I still don't understand just how your love can do what no one else can"</P>
-        </div> 
-        <div id="star">
-        
-        </div>
-        <div id="left">
-            <h2>
-                August 6 2003
-            </h2>
-            <p>
-                On August 6, 2003, "Crazy in Love" by Beyoncé featuring Jay-Z took the music industry by storm, claiming the top spot on the charts and becoming a summer anthem globally. With its infectious beat, powerful vocals, and seamless blend of R&B, hip-hop, and pop elements, the song set a new standard for collaborations. Beyond its chart-topping success, "Crazy in Love" left an enduring legacy, influencing pop culture and establishing itself as a timeless classic that defined the early 2000s. </p>    
-            <img src="./beyonceheadshot.jpeg" alt="Crazy In Love - Beyonce">       
-        </div>     
+            <div id="left">
+                <h2>August 6, 2003</h2>
+                <p>On August 6, 2003, "Crazy in Love" by Beyoncé featuring Jay-Z took the music industry by storm, claiming the top spot on the charts and becoming a summer anthem globally. With its infectious beat, powerful vocals, and seamless blend of R&B, hip-hop, and pop elements, the song set a new standard for collaborations. Beyond its chart-topping success, "Crazy in Love" left an enduring legacy, influencing pop culture and establishing itself as a timeless classic that defined the early 2000s.</p>
+                <img src="./beyonceheadshot.jpeg" alt="Crazy In Love - Beyonce">
+            </div>
+        </section>
     </div>
 </body>
-
 </html>
